Update 6110 code from 4844
Signed-off-by: Navie Chan <naviechan@gmail.com>